Add TA and fix some mistakes

--- a/eae0310_ementa_2023.html
+++ b/eae0310_ementa_2023.html
@@ -79,13 +79,13 @@ cronograma</a></li>
 <section class="main-content">
 <div id="objetivo-geral" class="section level3">
 <h3>Objetivo Geral</h3>
-<p>Em economias modernas mais de um terço do produto nacional é
+<p>Em economias modernas, mais de um terço do produto nacional é
 absorvido pelos governos na forma de impostos; eles empregam um de cada
-cinco trabalhadores (média da OCDE) e no Brasil o consumo governamental
+cinco trabalhadores (média da OCDE), e no Brasil o consumo governamental
 responde por quase 20% do PIB. É indiscutível, portanto, que o estudo do
 papel do setor público na economia é fundamental para o entendimento das
 sociedades modernas.</p>
-<p>Nesse curso estudaremos em que situações e de que forma o governo
+<p>Neste curso estudaremos em que situações e de que forma o governo
 deve atuar na economia de forma a gerar o melhor bem-estar para a
 sociedade, e se de fato isso ocorre no mundo real (e por que não).
 Estudaremos também como deve ser organizado o sistema tributários dos
@@ -107,8 +107,8 @@ corretamente.<br />
 formulação de políticas públicas, desenvolvendo ensaios argumentativos
 defendendo adoção de políticas.</li>
 <li>Julgar a coerência lógica e condizência empírica de argumentos
-econômicos, avaliando criticamente os argumentos dos colegas de classe.
-<!-- participando ativamente da discussão em aula. --></li>
+econômicos, avaliando criticamente os argumentos dos colegas de
+classe.</li>
 </ol>
 </div>
 <div id="avaliação-de-aprendizagem" class="section level3">
@@ -127,8 +127,7 @@ pares (6500 caracteres): até 10% da nota final cada um
 (<strong>opcional</strong>). Toda a nota virá da avaliação do ensaio do
 aluno, mas os ensaios apenas valerão crédito se <em>ambas</em> as
 atividades forem feitas adequadamente. (Objetivos de aprendizagem 3 e
-4.)
-<!-- 4. Participação em aula: *até* 10% da nota final (opcional). (Objetivo de aprendizagem 3.) --></li>
+4.)</li>
 </ol>
 <p>A não participação em uma atividade opcional (ensaio ou lista)
 <strong>não</strong> impede a participação do aluno em qualquer outra
@@ -162,12 +161,9 @@ Setor Público I na pós.</p>
 </div>
 <div id="contato" class="section level3">
 <h3>Contato</h3>
-<p>Dúvidas gerais sobre a matéria ou o curso podem (preferencialmente)
-ser perguntadas no fórum do Moodle. Para questões específicas e
-individuais me mandem um <a href="mailto:pforquesato@usp.br">e-mail</a>.
-Se quiserem conversar pessoalmente, podem marcar um horário de
-atendimento no link disponível na plataforma. A minha sala é a 217 no
-FEA2.</p>
+<p>Para questões específicas e individuais me mandem um <a href="mailto:pforquesato@usp.br">e-mail</a>. Se quiserem conversar
+pessoalmente, podem marcar um horário de atendimento no link disponível
+na plataforma. A minha sala é a 217 no FEA2.</p>
 <p>Por favor, sempre mandem e-mails claramente identificados, legíveis,
 <em>educados</em> e relativamente curtos. (Se o e-mail que vocês está
 escrevendo tem mais de 2 parágrafos, talvez valha a pena conversarmos
@@ -175,19 +171,18 @@ pessoalmente.)</p>
 </div>
 <div id="monitoria" class="section level3">
 <h3>Monitoria</h3>
-<p>A monitora do curso será… Ela será responsável por uma monitoria
-semanal (definam entre si por favor um cronograma) e office-hours quando
-necessário. Estará disponível para ajudar por e-mail também. A monitoria
-é <em>parte importante</em> (mas não obrigatória) do curso.</p>
+<p>A monitora do curso será a <a href="mailto:fernandaperon@usp.br">Fernanda Perón</a>. Ela será
+responsável por uma monitoria semanal (definam entre si por favor um
+cronograma) e office-hours quando necessário. Estará disponível para
+ajudar por e-mail também. A monitoria é <em>parte importante</em> (mas
+não obrigatória) do curso.</p>
 </div>
 <div id="políticas-e-regulamentos" class="section level3">
 <h3>Políticas e regulamentos</h3>
 <p><strong>Aulas.</strong> As aulas serão segundas-feiras das 07h30 às
 09h10 e quartas-feiras das 09h20 às 11h00 (turma 2023-121) e segundas
 das 09h20 às 11h00 e quartas das 7h30 às 09h10 (turma 2023-122) na sala
-<strong>XX</strong> do FEA 1.</p>
-<p>Como eu preciso deixar meu filho na creche antes do trabalho, e a
-creche só abre às 07h30, as aulas começarão sempre 07h40.</p>
+<strong>G-02</strong> do FEA 1.</p>
 <p><strong>Comunicação.</strong> Toda a comunicação oficial por minha
 parte do curso será feita pelo <a href="https://edisciplinas.usp.br">Moodle</a>, incluindo listas, notas,
 presenças, trabalhos e avisos. O curso assume que o aluno acessa
@@ -279,12 +274,12 @@ de meio-termo 2022]</a></p>
 <li><strong>Taxação de poupança</strong>: <span class="citation">Gruber
 (2016)</span>, cap. 22. [12/06, 14/06]. <a href="https://www.pedroforquesato.com/eae0310/eae0310-12-taxacao-poupanca.html">[Slides]</a></li>
 <li><strong>Impostos sobre riqueza</strong>: <span class="citation">Gruber (2016)</span>, cap. 23, <span class="citation">Scheuer and Slemrod (2021)</span>. [19/06, 21/06]. <a href="https://www.pedroforquesato.com/eae0310/eae0310-13-imposto-riqueza.html">[Slides]</a></li>
-<li><strong>Impostos corporativos</strong>: <span class="citation">Gruber (2016)</span>, cap. 24, <span class="citation">Zucman (2014)</span>. [26/07, 28/07]. <a href="https://www.pedroforquesato.com/eae0310/eae0310-14-imposto-corporativo.html">[Slides]</a></li>
+<li><strong>Impostos corporativos</strong>: <span class="citation">Gruber (2016)</span>, cap. 24, <span class="citation">Zucman (2014)</span>. [26/06, 28/06]. <a href="https://www.pedroforquesato.com/eae0310/eae0310-14-imposto-corporativo.html">[Slides]</a></li>
 </ol>
-<p>Prova final: <strong>05/08</strong>. <a href="https://www.pedroforquesato.com/files/eae0310_lista_2_2023.pdf">[Lista
+<p>Prova final: <strong>05/07</strong>. <a href="https://www.pedroforquesato.com/files/eae0310_lista_2_2023.pdf">[Lista
 2]</a> <a href="https://www.pedroforquesato.com/files/eae0310_prova_2_2022.pdf">[Prova
 final 2022]</a></p>
-<p>Reaval: <strong>17/08</strong>.</p>
+<p>Reaval: <strong>17/07</strong>.</p>
 <p>A data limite de entrega das listas e dos ensaios está definida no
 Moodle. <em>A entrega das listas e ensaios será pelo próprio
 Moodle.</em></p>
