--- a/eae0310-1-introducao.html
+++ b/eae0310-1-introducao.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.15/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
 ]
 .date[
-### Aula 1: Análise normativa<br/>2022/1
+### Aula 1: Análise normativa<br/>2023/1
 ]
 
 ---
@@ -36,7 +36,7 @@ class: inverse, middle, center
 ---
 class: middle
 
-&lt;img src="figs/syllabus.jpg" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/syllabus2.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle
@@ -141,6 +141,14 @@ class: middle
 &lt;img src="figs/eae0310-1-4.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 O Brasil é mais desigual que qualquer outra grande economia (5º maior do mundo/UNDP), embora o crescimento recente da desigualdade nos EUA tenha o aproximado do nosso país [Sou16]
+
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-1-16.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+
+Enquanto no Brasil os 5% mais pobres tem a renda igual aos 5% mais pobres da Índia ou da área rural da China, os 1% mais ricos aqui tem a mesma renda do 1% mais ricos nos EUA [@BrankoMilan](https://twitter.com/BrankoMilan)
 
 ---
 class: middle
