Update lectures 1 and 5

--- a/eae0310-1-introducao.html
+++ b/eae0310-1-introducao.html
@@ -152,6 +152,20 @@ Enquanto no Brasil os 5% mais pobres tem a renda igual aos 5% mais pobres da Ín
 
 ---
 class: middle
+
+&lt;img src="figs/eae0310-7-17.png" width="50%" /&gt;&lt;img src="figs/eae0310-7-17b.png" width="50%" /&gt;
+
+De forma coerente com a **curva de Gatsby**, o Brasil não apenas tem enorme desigualdade de renda, como também desigualdade intergeracional: uma criança nascida em família do quintil superior tem quase 50% de chance de se manter nele, assim como uma nascida no quintil inferior [Bri+22]
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-7-18.png" width="70%" style="display: block; margin: auto;" /&gt;
+
+A mobilidade intergeneracional é menor no Norte e Nordeste, e maior no Sul, Sudeste e Centro-oeste &amp;mdash; mas é mais baixa nas capitais, como Rio e São Paulo [Bri+22]
+
+---
+class: middle
 ## 2. Como o governo pode intervir na economia?
 
 Por exemplo, digamos que o governo queira incentivar a produção de bens desejáveis (e.g. saúde) ou desicentivar de indesejáveis, ele pode: 
@@ -494,22 +508,25 @@ economics: Updated edition_. Princeton University Press, 2015.
 
 [Bas73] F. Bastiat. _Economic sophisms_. Oliver and Boyd, 1873.
 
+[Bri+22] D. GC Britto, A. d. A. Fonseca, P. Pinotti, et al.
+"Intergenerational Mobility in the Land of Inequality".  (2022).
+
 [Edg97] F. Y. Edgeworth. "The pure theory of taxation". In: _The
 Economic Journal_ 7.25 (1897), pp. 46-70.
 
 [Gru16] J. Gruber. _Public finance and public policy_. 5th ed.
 Macmillan, 2016.
-
-[Kle18] H. J. Kleven. "Language trends in public economics". In:
-_Slides accessed at
-https://www.henrikkleven.com/uploads/3/7/3/1/37310663/languagetrendsslideskleven.pdf
-on December_ 7 (2018), p. 2019.
 &lt;/small&gt;
 
 ---
 class:middle
 # Referências
 &lt;small&gt;
+[Kle18] H. J. Kleven. "Language trends in public economics". In:
+_Slides accessed at
+https://www.henrikkleven.com/uploads/3/7/3/1/37310663/languagetrendsslideskleven.pdf
+on December_ 7 (2018), p. 2019.
+
 [NW14] R. Nozick and B. Williams. _23. Anarchy, State and Utopia_.
 Princeton University Press, 2014.
 
