Add slides lecture 3

--- a/eae0310-3-economia-politica.html
+++ b/eae0310-3-economia-politica.html
@@ -218,6 +218,20 @@ class: middle
 
 Há épocas em que o *eleitor mediano* explica bem a política, mas recentemente a polarização tem aumentado [Gru16]
 
+---
+class: middle
+
+&lt;img src="figs/eae0310-3-18.png" width="85%" /&gt;
+
+Tradicionalmente, o teorema do eleitor mediano é aplicado na escala direita-esquerda, e principalmente com base na renda: o gráfico mostra que pessoas mais ricas sempre votaram mais para partidos de direita &amp;mdash; no passado, isso também era verdade para pessoas mais educadas, mas recentemente isso se inverteu [GMP22]
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-3-19a.png" width="50%" /&gt;&lt;img src="figs/eae0310-3-19b.png" width="50%" /&gt;
+
+Isso leva [GMP22] a propor uma escala *bidimensional* de conflito político: uma dimensão de "conflito de classes", direita vs esquerda (baseada na renda), e uma dimensão sociocultural, de "cosmopolita vs nativista" (baseada em educação), e dois tipos de elites: a "direita mercantil" e a "esquerda Brahmin"
+
 
 ---
 class: middle
@@ -472,6 +486,11 @@ In: _The Quarterly journal of economics_ 123.2 (2008), pp. 703-745.
 [FFM12] C. Ferraz, F. Finan, and D. B. Moreira. "Corrupting learning:
 Evidence from missing federal education funds in Brazil". In: _Journal
 of Public Economics_ 96.9-10 (2012), pp. 712-726.
+
+[GMP22] A. Gethin, C. Martínez-Toledano, and T. Piketty. "Brahmin left
+versus merchant right: Changing political cleavages in 21 western
+democracies, 1948-2020". In: _The Quarterly Journal of Economics_ 137.1
+(2022), pp. 1-48.
 
 [Gru16] J. Gruber. _Public finance and public policy_. 5th ed.
 Macmillan, 2016.
