Small change lecture 7

--- a/eae0310-7-assistencia-social.html
+++ b/eae0310-7-assistencia-social.html
@@ -117,6 +117,8 @@ Transferência de dinheiro dos ricos para os pobres não é de graça, pois gera
 
 Se a transferência for *means-tested* (todas no Brasil são), então também gera um **imposto implícito** sobre os mais pobres
 
+`$$\tau_{\text{implicito}} = \frac{\Delta \text{renda de mercado} - \Delta  \text{renda disponivel} }{\Delta \text{renda de mercado}}$$`
+
 O nível ótimo de transferência então vai depender de comparar esse efeito de risco moral com o benefício gerado por transferir renda de agentes com utilidade marginal da riqueza baixa para aqueles com UMg alta
 
 ---
