Add new graphs, will need to fix

--- a/eae0310-13-imposto-riqueza.html
+++ b/eae0310-13-imposto-riqueza.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -232,6 +232,16 @@ class: middle
 &lt;img src="figs/eae0310-13-9.png" width="80%" /&gt;
 
 O fluxo anual de heranças como proporção do PIB na França era de 20% durante a Revolução Industrial, chegou a 1/4 na *belle époque*, desabou para 8% na 1GM e 4% no pós-guerra, mas tem voltado a subir [Pik11]
+
+
+---
+class: middle
+
+&lt;img src="figs/feapub7.png" width="95%" /&gt;
+
+Composição da riqueza dos 90% "mais pobres" (Zucman)
+
+
 
 ---
 class: middle
