--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -197,6 +197,14 @@ class: middle
 &lt;img src="figs/eae0310-12-13.png" width="80%" /&gt;
 
 Nos Estados Unidos, a riqueza dos mais ricos também cresce de forma contínua até a morte, contrariando a hipótese do ciclo-da-vida, que implicaria uma queda na riqueza na aposentadoria (**suavização do consumo**) &amp;mdash; esse comportamento condiz mais com riqueza na função de utilidade [Kop07]
+
+---
+class: middle
+
+&lt;img src="figs/feapub8.png" width="95%" /&gt;
+
+Taxa de poupança por classe de riqueza (Zucman)
+
 
 ---
 class: middle
