Add new graphs to lectures 12, 13

--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -203,7 +203,7 @@ class: middle
 
 &lt;img src="figs/feapub8.png" width="95%" /&gt;
 
-Taxa de poupança por classe de riqueza (Zucman)
+Fora na crise de 30, os mais ricos sempre tiveram taxa de poupança maior que os ricos e bem maior que a classe média e os mais pobres, que nos EUA poupam pouco quase nada [SZ16] 
 
 
 ---
@@ -432,6 +432,10 @@ in rich countries 1700-2010". In: _The Quarterly Journal of Economics_
 [Smi+19] M. Smith, D. Yagan, O. Zidar, et al. "Capitalists in the
 Twenty-first Century". In: _The Quarterly Journal of Economics_ 134.4
 (2019), pp. 1675-1745.
+
+[SZ16] E. Saez and G. Zucman. "Wealth inequality in the United States
+since 1913: Evidence from capitalized income tax data". In: _The
+Quarterly Journal of Economics_ 131.2 (2016), pp. 519-578.
 &lt;/small&gt;
 
 
