--- a/eae0310-13-imposto-riqueza.html
+++ b/eae0310-13-imposto-riqueza.html
@@ -239,7 +239,7 @@ class: middle
 
 &lt;img src="figs/feapub7.png" width="95%" /&gt;
 
-Composição da riqueza dos 90% "mais pobres" (Zucman)
+A riqueza dos 90% "mais pobres" tem uma composição muito diferente da dos 10% mais ricos, sendo quase inteiramente composta por riqueza previdenciária e propriedade imobiliária [SZ16] 
 
 
 
@@ -485,6 +485,10 @@ in rich countries 1700-2010". In: _The Quarterly Journal of Economics_
 
 [SS21] F. Scheuer and J. Slemrod. "Taxing our wealth". In: _Journal of
 Economic Perspectives_ 35.1 (2021), pp. 207-30.
+
+[SZ16] E. Saez and G. Zucman. "Wealth inequality in the United States
+since 1913: Evidence from capitalized income tax data". In: _The
+Quarterly Journal of Economics_ 131.2 (2016), pp. 519-578.
 &lt;/small&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
