--- a/eae0310-9-incidencia.html
+++ b/eae0310-9-incidencia.html
@@ -4,6 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,10 +12,18 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
+]
+.author[
 ### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+]
+.institute[
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
-### Aula 9: Incidência de impostos<br/>2022/1
+]
+.date[
+### Aula 9: Incidência de impostos<br/>2023/1
+]
 
 ---
 
@@ -77,6 +86,13 @@ class: middle
 &lt;img src="figs/eae0310-9-1.png" width="70%" style="display: block; margin: auto;" /&gt;
 
 Incidência em equilíbrio parcial &amp;mdash; sem imposto, `\(p^p = p^c = p\)` (Saez) 
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-9-15.png" width="85%" /&gt;
+
+O imposto se aplicado sobre o consumidor (no mercado de trabalho, a firma) desloca a curva de demanda para baixo (pois agora o bem está mais caro); se aplicado sobre o produtor (oferta de trabalho) desloca a curva de oferta para cima ao aumentar o custo por unidade vendida: em micro o efeito final (a *incidência econômica*) é sempre exatamente o mesmo  
 
 ---
 class: middle
@@ -491,6 +507,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
