small changes lect 13

--- a/eae0310-11-imposto-renda.html
+++ b/eae0310-11-imposto-renda.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -116,7 +116,16 @@ class: middle
 
 &lt;img src="figs/eae0310-11-10.png" width="70%" /&gt;
 
-Já a *taxa marginal* `\(T^{\prime}(z)\)` aumenta de forma discontínua (é uma *step function*), gerando **kinks** no gráfico de taxação, onde indivíduos agindo racionalmente tendem a se concentrar (Saez)
+Já a *taxa marginal* `\(T^{\prime}(z)\)` aumenta de forma discontínua (é uma *step function*), gerando **kinks** no gráfico de taxação, onde indivíduos agindo racionalmente tendem a se concentrar (*bunch*) (Saez)
+
+
+---
+class: middle
+
+&lt;img src="figs/notch.jpg" width="65%" style="display: block; margin: auto;" /&gt;
+
+Já um **notch** é um aumento descontínuo na taxa média de impostos, como essa dedução de custos de childcare no Reino Unido para famílias até £100 mil: a renda após-impostos de famílias com dois filhos que ganham £99k/ano é *maior* que daquelas que ganham £100-140k/ano se contar custos de childcare
+
 
 ---
 class: middle
@@ -494,9 +503,9 @@ class:middle
 # Referências
 &lt;small&gt;
 [Kle+14] H. J. Kleven, C. Landais, E. Saez, et al. "Migration and wage
-effects of taxing top earners: Evidence from the foreignersâ€™ tax
-scheme in Denmark". In: _The Quarterly Journal of Economics_ 129.1
-(2014), pp. 333-378.
+effects of taxing top earners: Evidence from the foreigners’ tax scheme
+in Denmark". In: _The Quarterly Journal of Economics_ 129.1 (2014), pp.
+333-378.
 
 [KLS13] H. J. Kleven, C. Landais, and E. Saez. "Taxation and
 international migration of superstars: Evidence from the European
