--- a/eae0310-13-imposto-riqueza.html
+++ b/eae0310-13-imposto-riqueza.html
@@ -51,6 +51,12 @@ class: middle
 
 Ao contrário de uma percepção pública do "self-made man", a maior parte da riqueza mundial ainda hoje é herdada, nos EUA até mais que na Europa, e essa proporção tem crescido desde 1980 [AGP17]
 
+---
+class: middle
+
+&lt;img src="figs/eae0310-13-9.png" width="80%" /&gt;
+
+O fluxo anual de heranças como proporção do PIB na França era de 20% durante a Revolução Industrial, chegou a 1/4 na *belle époque*, desabou para 8% na 1GM e 4% no pós-guerra, mas tem voltado a subir [Pik11]
 
 ---
 class: middle
@@ -124,7 +130,7 @@ Agora considere uma taxação diretamente sobre o retorno do ativo arriscado: `$
 
 Domar e Musgrave já em 1944 perceberam que sob algumas hipóteses taxação de ativos arriscados `\(\tau_A\)` *aumenta* a tomada de risco
 
-Pense que o ativo `\(x\)` custe `$`100 e pague `$`120 no cenário positivo e `$`80 no cenário negativo (50% de chance cada) e que `\(r\)` seja dinheiro sem inflação &amp;mdash; então uma taxação de 50% no retorno do ativo com **compensação de perdas** vai fazer o ativo pagar `$`110 no cenário positivo e `$`90 no cenário negativo
+Pense que o ativo `\(x\)` custe `$`100 e pague `$`140 no cenário positivo e `$`80 no cenário negativo (50% de chance cada) e que `\(r\)` seja dinheiro sem inflação &amp;mdash; então uma taxação de 50% no retorno do ativo com **compensação de perdas** vai fazer o ativo pagar `$`120 no cenário positivo e `$`90 no cenário negativo
 
 ---
 class: middle
@@ -229,18 +235,9 @@ Notem que mesmo que heranças monetárias fossem inteiramente taxadas, isso não
 ---
 class: middle
 
-&lt;img src="figs/eae0310-13-9.png" width="80%" /&gt;
+&lt;img src="figs/inheritance.png" width="65%" style="display: block; margin: auto;" /&gt;
 
-O fluxo anual de heranças como proporção do PIB na França era de 20% durante a Revolução Industrial, chegou a 1/4 na *belle époque*, desabou para 8% na 1GM e 4% no pós-guerra, mas tem voltado a subir [Pik11]
-
-
----
-class: middle
-
-&lt;img src="figs/feapub7.png" width="95%" /&gt;
-
-A riqueza dos 90% "mais pobres" tem uma composição muito diferente da dos 10% mais ricos, sendo quase inteiramente composta por riqueza previdenciária e propriedade imobiliária [SZ16] 
-
+Na China, elites pré-revolucionárias transmitem diferenças de renda aos seus netos por cultura, educação em casa, etc., mesmo que elas não tenham gerado renda aos filhos por causa do comunismo
 
 
 ---
@@ -252,6 +249,15 @@ A única razão para a taxação de propriedade (imóveis, carros, etc) é que e
 Uma visão é a de *benefits tax view*, o **modelo de Tiebout**: o imposto (local) sobre moradia é usado para pagar bens públicos locais, então é apenas um preço pago pelas amenidades do município &amp;mdash; ele não redistribui renda
 
 A ideia é que no modelo de Tiebout as pessoas "votam com os pés", e por isso as cidades têm que manter o imposto local igual ao benefício de se morar lá
+
+
+---
+class: middle
+
+&lt;img src="figs/feapub7.png" width="95%" /&gt;
+
+A riqueza dos 90% "mais pobres" tem uma composição muito diferente da dos 10% mais ricos, sendo quase inteiramente composta por riqueza previdenciária e propriedade imobiliária [SZ16] 
+
 
 ---
 class: middle
@@ -482,7 +488,13 @@ returns". In: _The Quarterly Journal of Economics_ 122.4 (2007), pp.
 [PZ14] T. Piketty and G. Zucman. "Capital is back: Wealth-income ratios
 in rich countries 1700-2010". In: _The Quarterly Journal of Economics_
 129.3 (2014), pp. 1255-1310.
+&lt;/small&gt;
 
+
+---
+class:middle
+# Referências
+&lt;small&gt;
 [SS21] F. Scheuer and J. Slemrod. "Taxing our wealth". In: _Journal of
 Economic Perspectives_ 35.1 (2021), pp. 207-30.
 
